--- a/html/navigation bar/bobble blow.html
+++ b/html/navigation bar/bobble blow.html
@@ -1,183 +1,161 @@
-<!DOCTYPE html>
+
+<!doctype html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Licorice&display=swap" rel="stylesheet">
-    <title>Document</title>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Demo - The Web's Sixth Sense: A Study of Scripts Accessing Smartphone Sensors</title>
+    <link href="/assets/css/bootstrap.min.css" rel="stylesheet">
+    <title>JavaScript Sensor Access Demo</title>
+    <style>
+      #demo-div {color: lightgrey; border-radius: 0.3rem;}
+      #demo-div span, #demo-div #num-observed-events {color: black;}
+      h1 {margin-top: 0.5rem;}
+      h4 {margin-top: 0.66rem; font-size:1.33rem;}
+      #demo-div li {line-height: 21px;}
+      #demo-div ul {margin-bottom: 0.66rem;}
+    </style>
 </head>
-<style>
-    body {
-        background-color: rgb(103, 103, 107);
-        background-image: url("imgs/tree.png");
-        background-repeat: no-repeat;
-        background-position: left center;
-    }
-
-    .navigation {
-        position: fixed;
-        top: 0;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        height: 70px;
-        width: 70px;
-        border-top-right-radius: 50%;
-        border-bottom-right-radius: 50%;
-        border-bottom-left-radius: 50%;
-        background-color: rgb(252, 103, 103);
-        animation: shake1 500ms ease-in-out forwards;
-    }
-
-    .navigation1 {
-        display: none;
-        height: 250px;
-        width: 250px;
-        margin-top: 35px;
-        margin-left: 35px;
-        border-radius: 50%;
-        background-color: rgb(252, 103, 103);
-    }
-
-    .navigation2 {
-        position: fixed;
-        height: 70px;
-        width: 70px;
-        border-top-right-radius: 50%;
-        border-bottom-right-radius: 50%;
-        border-bottom-left-radius: 50%;
-        background-color: rgb(252, 103, 103);
-    }
-
-    .navigation:hover {
-        border-top-right-radius: 50%;
-        border-bottom-right-radius: 50%;
-        border-bottom-left-radius: 50%;
-        background-color: rgb(89, 92, 88);
-        animation: shake 500ms ease-in-out forwards;
-    }
-
-    @keyframes shake {
-        from {
-            width: 200px;
-            height: 200px;
-        }
-
-        to {
-            width: 300px;
-            height: 300px;
-        }
-    }
-
-    @keyframes shake1 {
-        from {
-            width: 300px;
-            height: 300px;
-        }
-
-        to {
-            width: 100px;
-            height: 100px;
-        }
-    }
-
-    .grid-container {
-        display: grid;
-        grid-template-columns: auto auto;
-        margin-left: 50px;
-    }
-
-    .grid-item {
-        padding: 0ch;
-        width: 50px;
-        height: 50px;
-        margin-top: 50px;
-        text-align: center;
-    }
-    .tpcomuni{
-        position: fixed;
-        top: 0;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        height: 100px;
-        width: 100%;
-        margin-left: 50px;
-        background-color: brown;
-    }
-    .container1{
-        border-width: 10px;
-        border-color: rgb(0, 0, 0);
-        width: 700px;
-        height: 500px;
-        margin-top: 150px;
-        margin-left: 700px;
-        /* background-color: rgb(114, 110, 108); */
-        font-family: Verdana, sans-serif;
-    }
-    h2{
-        font-family: 'Inconsolata', monospace;
-        color: ghostwhite;
-        font-size: 40px;
-        font-weight: 200;
-    }
-</style>
-
 <body>
-    <!-- <div class="tpcomuni"></div> -->
-    <div class="container1">
-        <h2>>Attend test and get Certificate</h2>
-        <h2>>Each certificate is generated with a unique id and can be verified anytime</h2>
-        <h2>>Create and maintain your blog for free</h2>
-    </div>
-    <div id="navigation1" onmouseover="shownav1()" onmouseout="hidenav1()" class="navigation nav">
-        <div id="navigation2" class="navigation2 nav">
-            <img id="navspace0" class="nav" src="imgs/home.png" width="30px" style="margin-top: 20px; margin-left: 20px;"
-                draggable="false" alt=" Page Now At">
-        </div>
-        <div id="navigation3" class="navigation1 nav">
-            <div id=navigation4 class="grid-container nav">
-                <img id="navspace1" onclick="navigate(1)" class="grid-item nav" src="imgs/blog.png" draggable="false"
-                    alt="profile">
-                <img id="navspace2" onclick="navigate(2)" class="grid-item nav" src="imgs/profile.png" draggable="false"
-                    alt="profile">
-                <img id="navspace3" onclick="navigate(3)" class="grid-item nav" src="imgs/profile.png" draggable="false"
-                    alt="profile">
-                <img id="navspace4" onclick="navigate(4)" class="grid-item nav" src="imgs/profile.png" draggable="false"
-                    alt="profile">
-            </div>
-        </div>
-    </div>
+<main role="main" class="container">
+
+<h1 align="left">JavaScript Sensor Access Demo</h1>
+<p><b>This demo page should be run from a mobile phone or a tablet.</b></p>
+<p>This demo page shows how websites can access sensor data from mobile devices using <a href="https://developer.mozilla.org/en-US/docs/Web/Events/deviceorientation"><i>deviceorientation</i></a> and <a href="https://developer.mozilla.org/en-US/docs/Web/Events/devicemotion"><i>devicemotion</i></a> events.</p>
+
+<p><i>deviceorientation</i> provides <i>alpha</i>, <i>beta</i> and <i>gamma</i> components which correspond to orientation along the Z, X and Y axes, respectively.</p><p><i>devicemotion</i> provides acceleration and rotation rate along three axes using MEMS accelerometers and gyroscopes.</p>
+
+<p>The sensor data shown below does not leave your browser: it is not collected, shared or transmitted. However this may not be true for other websites that you visit. For more information, see the companion page for our study: <a href="https://sensor-js.xyz/">"The Web's Sixth Sense: A Study of Scripts Accessing Smartphone Sensors"</a>.</p>
+
+<div class="p-3 mb-2 bg-secondary" id="demo-div">
+<a id="start_demo" class="btn btn-lg btn-success py-1" href="#" role="button">Start the demo</a>
+<p style="margin-top:1rem;">Num. of datapoints: <span class="badge badge-warning" id="num-observed-events">0</span></p>
 
 
+<h4 style="margin-top:0.75rem;">Orientation</h4>
+<ul>
+  <li>X-axis (&beta;): <span id="Orientation_b">0</span><span>&deg;</span></li>
+  <li>Y-axis (&gamma;): <span id="Orientation_g">0</span><span>&deg;</span></li>
+  <li>Z-axis (&alpha;): <span id="Orientation_a">0</span><span>&deg;</span></li>
+</ul>
 
-</body>
+<h4>Accelerometer</h4>
+<ul>
+  <li>X-axis: <span id="Accelerometer_x">0</span><span> m/s<sup>2</sup></span></li>
+  <li>Y-axis: <span id="Accelerometer_y">0</span><span> m/s<sup>2</sup></span></li>
+  <li>Z-axis: <span id="Accelerometer_z">0</span><span> m/s<sup>2</sup></span></li>
+  <li>Data Interval: <span id="Accelerometer_i">0</span><span> ms</span></li>
+</ul>
+
+<h4>Accelerometer including gravity</h4>
+
+<ul>
+  <li>X-axis: <span id="Accelerometer_gx">0</span><span> m/s<sup>2</sup></span></li>
+  <li>Y-axis: <span id="Accelerometer_gy">0</span><span> m/s<sup>2</sup></span></li>
+  <li>Z-axis: <span id="Accelerometer_gz">0</span><span> m/s<sup>2</sup></span></li>
+</ul>
+
+<h4>Gyroscope</h4>
+<ul>
+  <li>X-axis: <span id="Gyroscope_x">0</span><span>&deg;/s</span></li>
+  <li>Y-axis: <span id="Gyroscope_y">0</span><span>&deg;/s</span></li>
+  <li>Z-axis: <span id="Gyroscope_z">0</span><span>&deg;/s</span></li>
+</ul>
+
+</div>
+</main>
+<footer class="footer">
+  <div class="container">
+    <span class="text-muted small">This page is hosted on GitHub Pages, please see GitHub's privacy statement
+    <a href="https://help.github.com/articles/github-privacy-statement/">here</a>.</span>
+  </div>
+</footer>
 <script>
-    var nav = [
-        { icon: 'imgs/home.png', page: '' },
-        { icon: 'imgs/blog.png', page: '' },
-        { icon: 'imgs/profile.png', page: '' },
-        { icon: 'imgs/profile.png', page: '' },
-        { icon: 'imgs/profile.png', page: '' }]
 
-    function shownav1() {
-        document.getElementById("navigation3").style.display = "block"
-    }
-    function hidenav1() {
-        document.getElementById("navigation3").style.display = "none"
-    }
-    function navigate(to) {
-        document.getElementById('navspace0').src = nav[to].icon
-        document.getElementById('navspace'.concat(to)).src = nav[0].icon
-        var a = nav[0]
-        nav[0] = nav[to]
-        nav[to] = a
-    }
+function handleOrientation(event) {
+  updateFieldIfNotNull('Orientation_a', event.alpha);
+  updateFieldIfNotNull('Orientation_b', event.beta);
+  updateFieldIfNotNull('Orientation_g', event.gamma);
+  incrementEventCount();
+}
+
+function incrementEventCount(){
+  let counterElement = document.getElementById("num-observed-events")
+  let eventCount = parseInt(counterElement.innerHTML)
+  counterElement.innerHTML = eventCount + 1;
+}
+
+function updateFieldIfNotNull(fieldName, value, precision=10){
+  if (value != null)
+    document.getElementById(fieldName).innerHTML = value.toFixed(precision);
+}
+
+function handleMotion(event) {
+  updateFieldIfNotNull('Accelerometer_gx', event.accelerationIncludingGravity.x);
+  updateFieldIfNotNull('Accelerometer_gy', event.accelerationIncludingGravity.y);
+  updateFieldIfNotNull('Accelerometer_gz', event.accelerationIncludingGravity.z);
+
+  updateFieldIfNotNull('Accelerometer_x', event.acceleration.x);
+  updateFieldIfNotNull('Accelerometer_y', event.acceleration.y);
+  updateFieldIfNotNull('Accelerometer_z', event.acceleration.z);
+
+  updateFieldIfNotNull('Accelerometer_i', event.interval, 2);
+
+  updateFieldIfNotNull('Gyroscope_z', event.rotationRate.alpha);
+  updateFieldIfNotNull('Gyroscope_x', event.rotationRate.beta);
+  updateFieldIfNotNull('Gyroscope_y', event.rotationRate.gamma);
+  incrementEventCount();
+}
+
+let is_running = false;
+let demo_button = document.getElementById("start_demo");
+demo_button.onclick = function(e) {
+  e.preventDefault();
+  
+  // Request permission for iOS 13+ devices
+  if (
+    DeviceMotionEvent &&
+    typeof DeviceMotionEvent.requestPermission === "function"
+  ) {
+    DeviceMotionEvent.requestPermission();
+  }
+  
+  if (is_running){
+    window.removeEventListener("devicemotion", handleMotion);
+    window.removeEventListener("deviceorientation", handleOrientation);
+    demo_button.innerHTML = "Start demo";
+    demo_button.classList.add('btn-success');
+    demo_button.classList.remove('btn-danger');
+    is_running = false;
+  }else{
+    window.addEventListener("devicemotion", handleMotion);
+    window.addEventListener("deviceorientation", handleOrientation);
+    document.getElementById("start_demo").innerHTML = "Stop demo";
+    demo_button.classList.remove('btn-success');
+    demo_button.classList.add('btn-danger');
+    is_running = true;
+  }
+};
+
+/*
+Light and proximity are not supported anymore by mainstream browsers.
+window.addEventListener('devicelight', function(e) {
+   document.getElementById("DeviceLight").innerHTML="AmbientLight current Value: "+e.value+" Max: "+e.max+" Min: "+e.min;
+});
+
+window.addEventListener('lightlevel', function(e) {
+   document.getElementById("Lightlevel").innerHTML="Light level: "+e.value;
+});
+
+window.addEventListener('deviceproximity', function(e) {
+   document.getElementById("DeviceProximity").innerHTML="DeviceProximity current Value: "+e.value+" Max: "+e.max+" Min: "+e.min;
+});
+
+window.addEventListener('userproximity', function(event) {
+   document.getElementById("UserProximity").innerHTML="UserProximity: "+event.near;
+});
+*/
+
 </script>
-
+</body>
 </html>
-
