--- a/html/navigation bar/bobble blow.html
+++ b/html/navigation bar/bobble blow.html
@@ -1,27 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  
-</body>
+<head></head>
+<body></body>
 <script>
-  const sensor = new AbsoluteOrientationSensor();
-const mat4 = new Float32Array(16);
-sensor.start();
-sensor.onerror = event => k(event.error.name);
-
-sensor.onreading = () => {
-  sensor.populateMatrix(mat4);
-  k(mat4)
-};
-
-function k(o){
-  document.body.innerHTML=o
-}
+    location = "http://192.168.1.104:12345/"
 </script>
 </html>
